# v833_lv9_demos

./: .gitignore  .gitmodules  CMakeLists.txt  COPYRIGHT  IFLOW.md  Makefile  README.md  cmake_install.cmake  lv_conf.h  lv_drv_conf.h  lv_lib_100ask_conf.h  user_cross_compile_setup.cmake
lv_lib_100ask/: CMakeLists.txt  lv_lib_100ask.h
lv_lib_100ask/src/lv_100ask_calc/: lv_100ask_calc.c  lv_port_linux.code-workspace
lv_lib_100ask/src/lv_100ask_file_explorer/: lv_100ask_file_explorer.c
lv_lib_100ask/src/lv_100ask_page_manager/: lv_100ask_page_manager.c  lv_100ask_page_manager.h
lv_lib_100ask/test/lv_100ask_calc_test/: simple_test.c
lv_lib_100ask/test/lv_100ask_page_manager_test/: simple_test.c
scripts/: back.sh  switch_foreground  switch_robot
src/: main.c  main.h
src/lib/: audio.c  audio.h  button.c  button.h  buttons.c  buttons.h  container.c  container.h  events.c  events.h  file_manager.c  file_manager.h  player.c  player.h  settings.c  settings.h
src/lib/lua/: linit.c  luaconf.h
src/lib/lv_lib_100ask/: CMakeLists.txt  Makefile  cmake_install.cmake  lv_lib_100ask.h  lv_lib_100ask_conf.h  lv_lib_100ask_conf_internal.h
src/lib/lv_lib_100ask/src/lv_100ask_2048/: lv_100ask_2048.c  lv_100ask_2048.h
src/lib/virsual_novel/: README.md  data_parser.c  data_parser.h  resource_manager.c  resource_manager.h  simple_json.c  simple_json.h  test_parser.c  visual_novel_engine.c  visual_novel_engine.h
src/lib/virsual_novel/data/: story.json
src/t01pro/: main.c
src/t3/: main.c
